--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,7 @@
             "styles": [
               "./node_modules/primeicons/primeicons.css",
               "./node_modules/primeng/resources/themes/lara-light-indigo/theme.css",
-              "./node_modules/primeng/resources/primeng.min.css",
+              "./node_modules/primeng/resources/primeng.css",
               "src/styles.css"
             ],
             
