--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/jquery": "^3.5.9",
     "bootbox": "^5.5.2",
     "bootstrap": "^5.1.3",
+    "circular-json": "^0.5.9",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
     "jwt-decode": "^3.1.2",
